--- a/src/sass/about-me/biography.scss
+++ b/src/sass/about-me/biography.scss
@@ -207,9 +207,9 @@
           @include geom.abs(50%, 50%);
           box-sizing: border-box;
           width: 100%;
+          pointer-events: none;
           max-width: 864px;
           padding: 5px;
-          visibility: hidden;
           background-color: var(--color-white);
           border: solid 2px var(--color-gold);
           border-radius: 0 60px 0 0;
@@ -218,7 +218,7 @@
           transform: translate(calc(-50% - 20px), -50%);
 
           &.active {
-            visibility: visible;
+            pointer-events: auto;
             opacity: 1;
             transform: translate(-50%, -50%);
           }
