--- a/src/sass/main/header.scss
+++ b/src/sass/main/header.scss
@@ -55,13 +55,13 @@
         position: absolute;
         bottom: 0;
         left: 50%;
-        transform: translateX(-50%);
         display: block;
         width: fit-content;
         text-align: center;
         letter-spacing: 0;
         opacity: 0;
         transition: 0.3s ease;
+        transform: translateX(-50%);
       }
 
       .menu {
@@ -122,7 +122,7 @@
     &.active {
       visibility: visible;
       backdrop-filter: blur(4px);
-      -webkit-backdrop-filter: blur(4px);
+      backdrop-filter: blur(4px);
 
       .inner {
         transform: translateX(0);
@@ -147,8 +147,8 @@
       transform: translateX(100%);
 
       @include mq.sm {
-        width: 100%;
         inset: 0;
+        width: 100%;
       }
 
       .bg {
